--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfilionextjs",
   "version": "0.1.0",
   "private": true,
+  "author": "Mjd Thif",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +11,13 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "qrcode": "^1.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
+    "react-scroll": "^1.8.7",
+    "sass": "^1.52.3"
   },
   "devDependencies": {
     "eslint": "8.17.0",
