--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "emailjs": "^4.0.0",
     "next": "12.1.6",
     "qrcode": "^1.5.0",
     "react": "18.2.0",
