--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "emailjs": "^4.0.0",
     "next": "12.1.6",
+    "pdfjs-dist": "^2.14.305",
     "qrcode": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
